Refactored method for mapper between DTOs